# llm-inference

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  demo.ipynb  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml  publish-to-pypi.yml
assets/: chatbot-demo.mov
docs/: CHANGELOG.md  CNAME  requirements.txt
docs/overrides/: main.html
examples/: inference-demo.ipynb
examples/chatbot/: README.md  app.py  bot.ipynb  chatbot-tutorial.ipynb  chatbot.ipynb  discord_bot.py  gradio_demo.py  llama_bot.py  llama_bot_ui.py
project/: __init__.py
project/core/: __init__.py
requirements/: chatbot.txt  dev.txt  requirements.txt
src/: requirements.txt
src/chatbot/: __init__.py  base.py  chain.py  conversation_chain.py  llm.py  templates.py
src/chatbot/ui/: __init__.py  main.py
src/chatserver/: base.py  chain.py
src/chatserver/chain/: __init__.py  chatbot_chain.py  lightning_client.py
src/chatserver/components/: __init__.py  llm_serve.py
src/chatserver/ui/: main.py  templates.py
src/llama_inference/: __init__.py  api.py  app.py  model.py  serve.py
src/llm_chain/: conversation_chain.py  llm.py  templates.py
src/llm_chain/ui/: main.py
src/llm_inference/: __init__.py  download.py  model.py  serve.py  token_manipulation.py
tests/chatbot/: test_chain.py
tests/core/: test_core.py
tests/llm_chain/: test_chain.py
