[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "project"
author = "AUTHOR_NAME"
author-email = "AUTHOR_EMAIL"
home-page = "https://github.com/USERNAME/PROJECT_NAME"
description-file = "README.md"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.6"
requires = [
]

[tool.flit.metadata.urls]
Documentation = "https://github.com/USERNAME/PROJECT_NAME"

[tool.flit.metadata.requires-extra]
style = ["black", "isort", "nbstripout"]
test = [
    "pytest",
    "coverage",
]

[tool.isort]
profile = "black"
