[metadata]
name = llama_inference
version = attr: llama_inference.__version__
author = Aniket Maurya
author_email = theaniketmaurya@gmail.com
description = Inference API for LLaMA
description-file = README.md
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown


[options]
package_dir =
    = src
