[metadata]
name = llama_inference
version = attr: llm_inference.__version__
author = Aniket Maurya
author_email = theaniketmaurya@gmail.com
description = Large Language Models Inference API and Chatbot
description-file = README.md
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
url = https://github.com/aniketmaurya/LLaMA-inference-api
license = Apache License 2.0
keywords = LLM, LLaMA, GPT

[options]
python_requires = >=3.8
package_dir =
    = src
