[metadata]
name = llm_inference
version = attr: llm_inference.__version__
author = Aniket Maurya
author_email = theaniketmaurya@gmail.com
description = Large Language Models Inference API and Applications
description-file = README.md
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
url = https://github.com/aniketmaurya/llm-inference
license = Apache License 2.0
keywords = LLM, LLaMA, GPT, Falcon

[options]
python_requires = >=3.8
package_dir =
    llm_inference = src/llm_inference
    llm_chain = src/llm_chain
